--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.9",
+    "airtable": "^0.11.4",
+    "axios": "^0.27.2",
+    "ipfs-http-client": "^57.0.3",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
